# actix_api

./: .env  Cargo.toml  Dockerfile  fly.toml
src/: captcha.rs  carousel.rs  contact.rs  db.rs  main.rs  projects.rs  registro.rs
static/: about.html  breadcrumbs.js  captcha.js  carousel.js  configurador.html  contact.html  error.html  index.html  projects.js  registros.html  registros.js  services.html  styles.css  upload.js
