[package]
name = "actix_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web="4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }

sqlx = {version = "0.7.4",features = ["runtime-tokio-native-tls","macros","postgres"]}

dotenvy = "0.15"
