[package]
name = "actix_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web="4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }


sqlx = {version = "0.7.4",features = ["runtime-tokio-rustls","macros","postgres"]}

dotenvy = "0.15"
