[package]
name = "actix_api"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-files = "0.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
actix-multipart = "0.6"
futures-util = "0.3"


